# EmbodiedAIOS

./: .gitignore  .gitmodules  README(EN).MD  README.MD  README.md  mask.txt  voice_test.py
piper_raspi_hc_sr04/: README.md  hc_sr04_driver.py  package.xml  setup.py
piper_raspi_hc_sr04/piper_raspi_hc_sr04/: sensors.yaml
src/: README.md  orbbec_camera  orbbec_camera_msgs  orbbec_description
src/piper/piper/: piper_ctrl_single_node.py
src/piper_control/: README.md  setup.py
src/piper_control/piper_control/: ctrl_base.py  ctrl_by_mujoco.py  ctrl_by_piper_sdk.py  ctrl_by_ros.py  grasp_server.py
src/piper_control/table_driven_control/: .gitignore  README.md  gen_table.py  search_by_kdtree.cpp  table_driven_ctrl.py
src/piper_description/mujoco_model/: piper_description.xml  piper_no_gripper_anthropomorphic_description.xml  piper_no_gripper_description.xml  piper_no_gripper_wrist_description.xml
src/piper_description/urdf/: piper_no_gripper_description.xacro  (+1 more)
src/piper_grasp_control_by_ros/: package.xml  setup.cfg
src/piper_launch/: package.xml  setup.cfg  setup.py
src/piper_llm/: package.xml  setup.cfg  setup.py
src/piper_llm/piper_llm/: README.md  (+16 more)
src/piper_mcp/: readme.md
src/piper_mcp/brain/mcp-client/: .env  client.py  pyproject.toml
src/piper_msgs/: CMakeLists.txt  package.xml
src/piper_navigation/: README.md  activate_map.sh
src/piper_navigation/src/goal_path_fixer/: package.xml  setup.cfg  setup.py
src/piper_navigation/src/goal_path_fixer/goal_path_fixer/: fix_path_header.py  goal_pose_refresher.py
src/piper_navigation/src/goal_path_fixer/launch/: fixers_launch.py
src/piper_ranger/: README.md
src/piper_raspi_hc_sr04/: README.md  hc_sr04_ros2_node.py  package.xml  requirements.txt  ros2_node.py  ros2_node.sh  run.sh  setup.py
src/piper_rl/: README.md  package.xml  setup.cfg  setup.py
src/piper_sim/: README(EN).md  README.md
src/piper_spatiallm/: README-wheatfox.md  convert.py  test.sh
src/piper_tf/: package.xml  setup.cfg  setup.py
src/piper_vision/: README.md  package.xml  setup.py
src/piper_voice/: README.md
(+97 files in other folders)
