[project]
name = "mcp-client"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.54.0",
    "elasticsearch>=9.0.2",
    "httpx>=0.28.1",
    "mcp[cli]>=1.9.4",
    "openai>=1.90.0",
    "python-dotenv>=1.1.0",
]
